--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ coverage
 .next/
 out/
 build
-
+/.swc/
 # misc
 .DS_Store
 *.pem
@@ -31,3 +31,6 @@ yarn-error.log*
 
 # turbo
 .turbo
+
+.vscode
+.idea
