--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "docs",
-  "version": "0.0.0",
+  "name": "website",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
