--- a/turbo.json
+++ b/turbo.json
@@ -2,8 +2,15 @@
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
+      "dependsOn": [
+        "^build",
+        "$NEXT_PUBLIC_SUPABASE_URL",
+        "$NEXT_PUBLIC_SUPABASE_ANON_KEY"
+      ],
+      "outputs": [
+        "dist/**",
+        ".next/**"
+      ]
     },
     "lint": {
       "outputs": []
