--- a/apps/studio-admin/package.json
+++ b/apps/studio-admin/package.json
@@ -17,8 +17,11 @@
     "antd": "^4.23.4",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "mobx": "^6.6.2",
+    "mobx-react": "^7.5.3",
     "next": "12.3.1",
     "next-with-less": "^2.0.5",
+    "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ui": "*"
