--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,8 @@
       "dependsOn": [
         "^build",
         "$NEXT_PUBLIC_SUPABASE_URL",
-        "$NEXT_PUBLIC_SUPABASE_ANON_KEY"
+        "$NEXT_PUBLIC_SUPABASE_ANON_KEY",
+        "$NEXT_PUBLIC_CAPTCHA_SITE_KEY"
       ],
       "outputs": [
         "dist/**",
