--- a/apps/studio-admin/package.json
+++ b/apps/studio-admin/package.json
@@ -13,8 +13,8 @@
     "@emotion/react": "^11.10.4",
     "@hcaptcha/react-hcaptcha": "^1.4.4",
     "@supabase/supabase-js": "^1.35.7",
-    "@supabase/ui": "^0.36.5",
     "antd": "^4.23.4",
+    "dayjs": "^1.11.5",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "mobx": "^6.6.2",
@@ -23,8 +23,7 @@
     "next-with-less": "^2.0.5",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ui": "*"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
