--- a/apps/studio-admin/package.json
+++ b/apps/studio-admin/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.5",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.6.2",
     "mobx-react": "^7.5.3",
     "next": "12.3.1",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/lodash": "^4.14.186",
     "@types/node": "^17.0.12",
     "@types/react": "18.0.17",
     "eslint": "7.32.0",
